syntax = "proto2";

package proto;

option java_package = "fi.hsl.common.hfp.proto";
option java_outer_classname = "Hfp";

// Message format is specified here: https://digitransit.fi/en/developers/apis/4-realtime-api/vehicle-positions/
// Topic is parsed from the detailed MQTT Topic name and the Payload from the JSON-payload

message Data {
    required int32 SchemaVersion = 1 [default = 1];
    optional Topic topic = 2;
    required Payload payload = 3;
}

message Topic {
    required int32 SchemaVersion = 1 [default = 1];

    enum JourneyType {
        journey = 0;
        deadrun = 1;
    }

    enum TemporalType {
        ongoing = 0;
        upcoming = 1;
    }

    enum TransportMode {
        bus = 0;
        train = 1;
        tram = 2;
        metro = 3;
        ferry = 4;
    }

    required int64 received_at = 2; // Our server timestamp as Epoch ms
    required string topic_prefix = 3;
    required string topic_version = 4;
    required JourneyType journey_type = 5;
    required TemporalType temporal_type = 6;

    optional TransportMode transport_mode = 7; // Optional because of rare bug in data source systems

    required int32 operator_id = 8;
    required int32 vehicle_number = 9;
    required string unique_vehicle_id = 10;
    
    optional string route_id = 11;
    optional int32 direction_id = 12;
    optional string headsign = 13;
    optional string start_time = 14;
    optional string next_stop = 15;
    optional int32 geohash_level = 16;
    optional double latitude = 17;
    optional double longitude = 18;
}

message Payload {
    required int32 SchemaVersion = 1 [default = 1];

    optional string desi = 2;
    optional string dir = 3;
    optional int32 oper = 4;
    optional int32 veh = 5;

    required string tst = 6;
    required int64 tsi = 7;

    optional double spd = 8;
    optional double hdg = 9;
    optional double lat = 10;
    optional double long = 11;
    optional double acc = 12;
    optional uint32 dl = 13;
    optional int32 odo = 14;
    optional uint32 drst = 15;
    optional string oday = 16;
    optional int32 jrn = 17;
    optional int32 line = 18;
    optional string start = 19;
}